--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youth United</title>
+    <meta name="description" content="A bold international youth media platform dedicated to uniting young voices in the fight against oppression and injustice all around the world.">
+
     <link rel="icon" href="/images/logo.jpg">
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
@@ -29,7 +31,7 @@
         </a>
     </div>
     <div id="home">
-        <div id="large"><b>Youth United</b></div>
+        <h1 id="large"><b>Youth United</b></h1>
         <div class="container container-small">
             <h2>
                 A bold international youth media platform dedicated to uniting young voices in the fight against oppression and injustice all around the world.
@@ -145,10 +147,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/katya.png" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Marketing Manager</h4>
-                                    <h3>Katya <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Russia.svg" alt=""></h3>
-                                    <div class="tealtext">She/her</div>
-                                    <div class="tealtext">ernikovak@mail.ru</div>
+                                    <div class="bluetext responsive-4">Marketing Manager</div>
+                                    <div class="responsive-3">Katya <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Russia.svg" alt=""></div>
+                                    <div class="tealtext responsive">She/her</div>
+                                    <div class="tealtext responsive">ernikovak@mail.ru</div>
                                 </div>
                             </div>
                         </div>
@@ -156,10 +158,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/alice.png" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Designer</h4>
-                                    <h3>Alice <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></h3>
-                                    <div class="tealtext">She/her</div>
-                                    <div class="tealtext">alisa.06022004@gmail.com </div>
+                                    <div class="bluetext responsive-4">Designer</div>
+                                    <div class="responsive-3">Alice <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></div>
+                                    <div class="tealtext responsive">She/her</div>
+                                    <div class="tealtext responsive">alisa.06022004@gmail.com </div>
                                 </div>
                             </div>
                         </div>
@@ -169,10 +171,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/oliver.JPG" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Web Developer</h4>
-                                    <h3>Oliver <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></h3>
-                                    <div class="tealtext">He/him</div>
-                                    <div class="tealtext">oliver.nagy@student.leaf.academy</div>
+                                    <div class="bluetext responsive-4">Web Developer</div>
+                                    <div class="responsive-3">Oliver <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></div>
+                                    <div class="tealtext responsive">He/him</div>
+                                    <div class="tealtext responsive">oliver.nagy@student.leaf.academy</div>
                                 </div>
                             </div>
                         </div>
@@ -180,10 +182,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/kristof.JPG" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">IT Consultant</h4>
-                                    <h3>Kristóf <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Flag_of_Hungary.svg/1200px-Flag_of_Hungary.svg.png" alt=""></h3>
-                                    <div class="tealtext">He/him</div>
-                                    <div class="tealtext">kristof.varga@student.leaf.academy</div>
+                                    <div class="bluetext responsive-4">IT Consultant</div>
+                                    <div class="responsive-3">Kristóf <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Flag_of_Hungary.svg/1200px-Flag_of_Hungary.svg.png" alt=""></div>
+                                    <div class="tealtext responsive">He/him</div>
+                                    <div class="tealtext responsive">kristof.varga@student.leaf.academy</div>
                                 </div>
                             </div>
                         </div>
@@ -194,10 +196,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/catalin.png" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Editor-In-Chief</h4>
-                                    <h3>Cătălin <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Flag_of_Belgium_%28civil%29.svg/2560px-Flag_of_Belgium_%28civil%29.svg.png" alt=""></h3>
-                                    <div class="tealtext">He/him</div>
-                                    <div class="tealtext">catalin.dontu@student.leaf.academy</div>
+                                    <div class="bluetext responsive-4">Editor-In-Chief</div>
+                                    <div class="responsive-3">Cătălin <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Flag_of_Belgium_%28civil%29.svg/2560px-Flag_of_Belgium_%28civil%29.svg.png" alt=""></div>
+                                    <div class="tealtext responsive">He/him</div>
+                                    <div class="tealtext responsive">catalin.dontu@student.leaf.academy</div>
                                 </div>
                             </div>
                         </div>
@@ -205,10 +207,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/dan.png" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Author</h4>
-                                    <h3>Dan <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Flag_of_Moldova.svg/2560px-Flag_of_Moldova.svg.png" alt=""></h3>
-                                    <div class="tealtext">He/him</div>
-                                    <div class="tealtext">whatdoyoumeandan@gmail.com</div>
+                                    <div class="bluetext responsive-4">Author</div>
+                                    <div class="responsive-3">Dan <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Flag_of_Moldova.svg/2560px-Flag_of_Moldova.svg.png" alt=""></div>
+                                    <div class="tealtext responsive">He/him</div>
+                                    <div class="tealtext responsive">whatdoyoumeandan@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -218,10 +220,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/regina.png" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Author</h4>
-                                    <h3>Regina <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/7/75/Flag_of_Estonia.jpg" alt=""></h3>
-                                    <div class="tealtext">She/her</div>
-                                    <div class="tealtext">regina.krentsel@gmail.com</div>
+                                    <div class="bluetext responsive-4">Author</div>
+                                    <div class="responsive-3">Regina <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/7/75/Flag_of_Estonia.jpg" alt=""></div>
+                                    <div class="tealtext responsive">She/her</div>
+                                    <div class="tealtext responsive">regina.krentsel@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -229,10 +231,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/lia.jpg" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Author</h4>
-                                    <h3>Lia <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Flag_of_Moldova.svg/2560px-Flag_of_Moldova.svg.png" alt=""></h3>
-                                    <div class="tealtext">She/they</div>
-                                    <div class="tealtext">lia.covaliov909@gmail.com</div>
+                                    <div class="bluetext responsive-4">Author</div>
+                                    <div class="responsive-3">Lia <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Flag_of_Moldova.svg/2560px-Flag_of_Moldova.svg.png" alt=""></div>
+                                    <div class="tealtext responsive">She/they</div>
+                                    <div class="tealtext responsive">lia.covaliov909@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -242,10 +244,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/sonya.png" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Author</h4>
-                                    <h3>Sonya <img class="flag" src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/1024px-Flag_of_the_United_Kingdom.svg.png" alt=""></h3>
-                                    <div class="tealtext">She/her</div>
-                                    <div class="tealtext">sofja.soboleva@gmail.com</div>
+                                    <div class="bluetext responsive-4">Author</div>
+                                    <div class="responsive-3">Sonya <img class="flag" src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/1024px-Flag_of_the_United_Kingdom.svg.png" alt=""></div>
+                                    <div class="tealtext responsive">She/her</div>
+                                    <div class="tealtext responsive">sofja.soboleva@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -253,10 +255,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/zlata.png" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Author</h4>
-                                    <h3>Zlata <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Russia.svg" alt=""></h3>
-                                    <div class="tealtext">She/her</div>
-                                    <div class="tealtext">weirdomuffin@gmail.com</div>
+                                    <div class="bluetext responsive-4">Author</div>
+                                    <div class="responsive-3">Zlata <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Russia.svg" alt=""></div>
+                                    <div class="tealtext responsive">She/her</div>
+                                    <div class="tealtext responsive">weirdomuffin@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -266,10 +268,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/riri.png" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Author</h4>
-                                    <h3>Riri <img class="flag" src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4c/Flag_of_Sweden.svg/1200px-Flag_of_Sweden.svg.png" alt=""></h3>
-                                    <div class="tealtext">She/her</div>
-                                    <div class="tealtext">rirush2004@gmail.com</div>
+                                    <div class="bluetext responsive-4">Author</div>
+                                    <div class="responsive-3">Riri <img class="flag" src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4c/Flag_of_Sweden.svg/1200px-Flag_of_Sweden.svg.png" alt=""></div>
+                                    <div class="tealtext responsive">She/her</div>
+                                    <div class="tealtext responsive">rirush2004@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -277,10 +279,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/teo.png" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Author</h4>
-                                    <h3>Teo <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Flag_of_Romania.svg/1200px-Flag_of_Romania.svg.png" alt=""></h3>
-                                    <div class="tealtext">They/them</div>
-                                    <div class="tealtext">erika.trusca@gmail.com</div>
+                                    <div class="bluetext responsive-4">Author</div>
+                                    <div class="responsive-3">Teo <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Flag_of_Romania.svg/1200px-Flag_of_Romania.svg.png" alt=""></div>
+                                    <div class="tealtext responsive">They/them</div>
+                                    <div class="tealtext responsive">erika.trusca@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -291,10 +293,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/tyoma.JPG" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Business Manager</h4>
-                                    <h3>Tyoma <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt="(Slovakia)"></h3>
-                                    <div class="tealtext">He/him</div>
-                                    <div class="tealtext">temabelkovest@gmail.com</div>
+                                    <div class="bluetext responsive-4">Business Manager</div>
+                                    <div class="responsive-3">Tyoma <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt="(Slovakia)"></div>
+                                    <div class="tealtext responsive">He/him</div>
+                                    <div class="tealtext responsive">temabelkovest@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -302,10 +304,10 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/ilia.png" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Development Manager</h4>
-                                    <h3>Ilia <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></h3>
-                                    <div class="tealtext">He/him</div>
-                                    <div class="tealtext">ilia.boldyrev@student.leaf.academy</div>
+                                    <div class="bluetext responsive-4">Development Manager</div>
+                                    <div class="responsive-3">Ilia <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></div>
+                                    <div class="tealtext responsive">He/him</div>
+                                    <div class="tealtext responsive">ilia.boldyrev@student.leaf.academy</div>
                                 </div>
                             </div>
                         </div>
@@ -315,9 +317,9 @@
                             <div class="member">
                                 <img class="member-body profile-pic" src="/images/people/zenja.png" alt="">
                                 <div class="member-body">
-                                    <h4 class="bluetext">Mood Manager</h4>
-                                    <h3>Zenja <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/7/75/Flag_of_Estonia.jpg" alt=""></h3>
-                                    <div class="tealtext">She/her</div>
+                                    <div class="bluetext responsive-4">Mood Manager</div>
+                                    <div class="responsive-3">Zenja <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/7/75/Flag_of_Estonia.jpg" alt=""></div>
+                                    <div class="tealtext responsive">She/her</div>
                                 </div>
                             </div>
                             </div>
