--- a/views/index.ejs
+++ b/views/index.ejs
@@ -150,7 +150,7 @@
                                     <div class="bluetext responsive-4">Marketing Manager</div>
                                     <div class="responsive-3">Katya <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Russia.svg" alt=""></div>
                                     <div class="tealtext responsive">She/her</div>
-                                    <div class="tealtext responsive">ernikovak@mail.ru</div>
+                                    <div class="tealtext responsive email">ernikovak@mail.ru</div>
                                 </div>
                             </div>
                         </div>
@@ -161,7 +161,7 @@
                                     <div class="bluetext responsive-4">Designer</div>
                                     <div class="responsive-3">Alice <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></div>
                                     <div class="tealtext responsive">She/her</div>
-                                    <div class="tealtext responsive">alisa.06022004@gmail.com </div>
+                                    <div class="tealtext responsive email">alisa.06022004@gmail.com </div>
                                 </div>
                             </div>
                         </div>
@@ -174,7 +174,7 @@
                                     <div class="bluetext responsive-4">Web Developer</div>
                                     <div class="responsive-3">Oliver <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></div>
                                     <div class="tealtext responsive">He/him</div>
-                                    <div class="tealtext responsive">oliver.nagy@student.leaf.academy</div>
+                                    <div class="tealtext responsive email">oliver.nagy@student.leaf.academy</div>
                                 </div>
                             </div>
                         </div>
@@ -185,7 +185,7 @@
                                     <div class="bluetext responsive-4">IT Consultant</div>
                                     <div class="responsive-3">Kristóf <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c1/Flag_of_Hungary.svg/1200px-Flag_of_Hungary.svg.png" alt=""></div>
                                     <div class="tealtext responsive">He/him</div>
-                                    <div class="tealtext responsive">kristof.varga@student.leaf.academy</div>
+                                    <div class="tealtext responsive email">kristof.varga@student.leaf.academy</div>
                                 </div>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
                                     <div class="bluetext responsive-4">Editor-In-Chief</div>
                                     <div class="responsive-3">Cătălin <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/92/Flag_of_Belgium_%28civil%29.svg/2560px-Flag_of_Belgium_%28civil%29.svg.png" alt=""></div>
                                     <div class="tealtext responsive">He/him</div>
-                                    <div class="tealtext responsive">catalin.dontu@student.leaf.academy</div>
+                                    <div class="tealtext responsive email">catalin.dontu@student.leaf.academy</div>
                                 </div>
                             </div>
                         </div>
@@ -210,7 +210,7 @@
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Dan <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Flag_of_Moldova.svg/2560px-Flag_of_Moldova.svg.png" alt=""></div>
                                     <div class="tealtext responsive">He/him</div>
-                                    <div class="tealtext responsive">whatdoyoumeandan@gmail.com</div>
+                                    <div class="tealtext responsive email">whatdoyoumeandan@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -223,7 +223,7 @@
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Regina <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/7/75/Flag_of_Estonia.jpg" alt=""></div>
                                     <div class="tealtext responsive">She/her</div>
-                                    <div class="tealtext responsive">regina.krentsel@gmail.com</div>
+                                    <div class="tealtext responsive email">regina.krentsel@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -234,7 +234,7 @@
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Lia <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/27/Flag_of_Moldova.svg/2560px-Flag_of_Moldova.svg.png" alt=""></div>
                                     <div class="tealtext responsive">She/they</div>
-                                    <div class="tealtext responsive">lia.covaliov909@gmail.com</div>
+                                    <div class="tealtext responsive email">lia.covaliov909@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -247,7 +247,7 @@
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Sonya <img class="flag" src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/1024px-Flag_of_the_United_Kingdom.svg.png" alt=""></div>
                                     <div class="tealtext responsive">She/her</div>
-                                    <div class="tealtext responsive">sofja.soboleva@gmail.com</div>
+                                    <div class="tealtext responsive email">sofja.soboleva@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -258,7 +258,7 @@
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Zlata <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/f/f3/Flag_of_Russia.svg" alt=""></div>
                                     <div class="tealtext responsive">She/her</div>
-                                    <div class="tealtext responsive">weirdomuffin@gmail.com</div>
+                                    <div class="tealtext responsive email">weirdomuffin@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -271,7 +271,7 @@
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Riri <img class="flag" src="https://upload.wikimedia.org/wikipedia/en/thumb/4/4c/Flag_of_Sweden.svg/1200px-Flag_of_Sweden.svg.png" alt=""></div>
                                     <div class="tealtext responsive">She/her</div>
-                                    <div class="tealtext responsive">rirush2004@gmail.com</div>
+                                    <div class="tealtext responsive email">rirush2004@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -282,7 +282,7 @@
                                     <div class="bluetext responsive-4">Author</div>
                                     <div class="responsive-3">Teo <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/73/Flag_of_Romania.svg/1200px-Flag_of_Romania.svg.png" alt=""></div>
                                     <div class="tealtext responsive">They/them</div>
-                                    <div class="tealtext responsive">erika.trusca@gmail.com</div>
+                                    <div class="tealtext responsive email">erika.trusca@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -296,7 +296,7 @@
                                     <div class="bluetext responsive-4">Business Manager</div>
                                     <div class="responsive-3">Tyoma <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt="(Slovakia)"></div>
                                     <div class="tealtext responsive">He/him</div>
-                                    <div class="tealtext responsive">temabelkovest@gmail.com</div>
+                                    <div class="tealtext responsive email">temabelkovest@gmail.com</div>
                                 </div>
                             </div>
                         </div>
@@ -307,7 +307,7 @@
                                     <div class="bluetext responsive-4">Development Manager</div>
                                     <div class="responsive-3">Ilia <img class="flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Flag_of_Slovakia.svg/1280px-Flag_of_Slovakia.svg.png" alt=""></div>
                                     <div class="tealtext responsive">He/him</div>
-                                    <div class="tealtext responsive">ilia.boldyrev@student.leaf.academy</div>
+                                    <div class="tealtext responsive email">ilia.boldyrev@student.leaf.academy</div>
                                 </div>
                             </div>
                         </div>
@@ -322,7 +322,7 @@
                                     <div class="tealtext responsive">She/her</div>
                                 </div>
                             </div>
-                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
