seo h1 optimization (hopefully)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -45,7 +45,7 @@
         <div class="container">
             <div id="articles">
                 <div class="filler"></div>
-                <h1 class="bluetext display-2">Recent Articles</h1>
+                <div class="bluetext display-2 mb-3">Recent Articles</div>
                 <a href="posts/post1">
                     <div class="post">
                         <h2>The liquidation of the Belarussian Youth European Parliament</h2>
@@ -85,7 +85,7 @@
             </div>
             <div id="history">
                 <div class="filler"></div>
-                <h1 class="bluetext display-2">History</h1>
+                <div class="bluetext display-2 mb-3">History</div>
                 <div class="event">
                     <h5 class="tealtext">19. January 2020</h5>
                     <h3>Youth United officially started existing with its first article: Bilingualism in Teenagers, written by Andrei, our first author.</h3>
@@ -132,13 +132,13 @@
             </div>
             <div id="future">
                 <div class="filler"></div>
-                <h1 class="bluetext display-2">Our Future</h1>
+                <div class="bluetext display-2 mb-3">Our Future</div>
                 <h5>We plan on continuing the already-established model of information-sharing through external media. However, our main focus is now expanding our own platform as European storytellers, telling graceful and uplifting content meant to vitalize youth around Europe in the creation of an activism-based youth scene.</h5>
                 <h5>However, to be successful in our endeavors, we need more resources. While we already have young people who are ready to support us voluntarily, we also need financial resources to keep our website running. If you want to support us, please contact our organizational manager Artem Belkov and consider supporting us on Patreon.</h5>
             </div>
             <div id="team">
                 <div class="filler"></div>
-                <h1 class="bluetext display-2">The Team</h1>
+                <div class="bluetext display-2 mb-3">The Team</div>
                 <h5>Currently consisting of 15 aspiring young Europeans, including Young European Ambassadors to the Eastern Partnership, previous winners of the European Citizen's prize, and many others, our team proudly supports solidarity between all people on the European continent.</h5>
                 <div>
                     <h3 class="mt-4">Marketing and IT House</h3>
